--- a/templates/frizz_landing.html
+++ b/templates/frizz_landing.html
@@ -82,13 +82,37 @@
 
     <div id="Aboutpage">
 
-        <h3>Ok, my hair is a hot mess, how can I fix it?</h3>
-        <p>
-        Frizz Wiz uses concepts found in The Curly Girl Method.
-        If you're interested in learning more about The Curly Girl Method, I recommend you
-        buy the book through Amazon
-        <a href="https://www.amazon.com/Curly-Girl-Handbook-Michele-Bender/dp/076115678X" target="_blank">here</a>.
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
 
+        <h2>HELP! My hair is a hot mess, how can I fix it?</h2>
+            <link rel="stylesheet" type="text/css" href="../static/styles.css">
+            <button id="buy_humectant_button">Buy a Styling Product with a Film Forming Humectant and an Emolient</button>
+            <script src="../static/buy_humectant.js"></script>
+        <br>
+            <link rel="stylesheet" type="text/css" href="../static/styles.css">
+            <button id="buy_conditioner_thick_button">Buy a Cream Leave In Conditioner for Thick, Curly or Long Hair</button>
+            <script src="../static/conditioner_thick.js"></script>
+        <br>
+            <link rel="stylesheet" type="text/css" href="../static/styles.css">
+            <button id="buy_conditioner_fine_button">Buy a Spray Leave In Conditioner for Straight or Fine Hair</button>
+            <script src="../static/conditioner_fine.js"></script>
+        <br>
+        <br>
+        <br>
+        <p>
+          Frizz Wiz uses concepts found in The Curly Girl Method.
+          If you're interested in learning more about The Curly Girl Method, I recommend you
+          buy the book through Amazon.
+        </p>
+            <link rel="stylesheet" type="text/css" href="../static/styles.css">
+            <button id="buy_book_button">Buy The Curly Girl Method Handbook</button>
+            <script src="../static/buy_book_button.js"></script>
+        <br>
         <h3>What is a The Curly Girl Method?</h3>
         The Curly Girl Method is an approach to hair care designed by author Lorraine Massey for natural hair (coils, waves, and curls) that has not been chemically relaxed.
         This method discourages the daily use of sulfate shampoo, which is considered too harsh for curly hair.
